--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Command-line interface for Apple Search Ads campaign management"
 readme = "README.md"
 license = "MIT"
 requires-python = ">=3.13"
-authors = [{ name = "Peth Pty Ltd", email = "hello@peth.com.au" }]
+authors = [{ name = "Sam Petherbridge", email = "hello@peth.me" }]
 keywords = [
     "apple",
     "search-ads",
@@ -28,13 +28,10 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "search-ads-api>=0.1.0",
+    "asa-api-client>=0.1.0",
     "typer>=0.13.0",
     "rich>=13.9.0",
 ]
-
-[tool.uv.sources]
-search-ads-api = { path = "../search-ads-api", editable = true }
 
 [project.scripts]
 asa = "search_ads_cli:app"
@@ -63,13 +60,16 @@ testpaths = ["tests"]
 python_version = "3.13"
 strict = true
 plugins = ["pydantic.mypy"]
+ignore_missing_imports = true
+warn_unused_ignores = false
 
 [tool.ruff]
 target-version = "py313"
-line-length = 100
+line-length = 120
 
 [tool.ruff.lint]
-select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
+select = ["E", "W", "F", "I", "B", "C4", "ARG"]
+ignore = ["B904"]
 
 [tool.coverage.run]
 source = ["search_ads_cli"]
