--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,10 @@ jobs:
         run: uv run ruff format --check .
 
       - name: Run type checking
-        run: uv run mypy search_ads_cli
+        run: uv run mypy asa_api_cli
 
       - name: Run tests
-        run: uv run pytest --cov=search_ads_cli --cov-report=xml
+        run: uv run pytest --cov=asa_api_cli --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
